# m4-mac-mini-slm-evalops

./: .gitignore  README.md  pyproject.toml
benchmark_packs/small-model-core/: README.md  pack.json
configs/small-models/: lfm25-8b-a1b-mlx-4bit.json  qwen25-coder-14b-mlx.json  qwen35-sushi-coder-rl-mlx.json
dashboard/: index.html
data/benchmark/: coding-generation-mlx-coder-slm-candidates-2026-06-01.json  coding-generation-prompt-pack-v1.json  coding-generation-smoke-candidates-2026-06-01.json  coding-role-language-candidates-2026-06-01.json  coding-role-language-candidates-9b-followup-2026-06-01.json  coding-role-language-candidates-next-2026-06-01.json  core-text-candidates-2026-05-30.json  hf-mlx-expanded-next-queue-2026-06-02.json  multilingual-domain-prompt-pack-v1.json  (+7 more)
docs/: architecture.md  coding-generation-benchmark.md  design_decisions.md  failure_taxonomy.md  m4-mac-mini-benchmark-scope.md  model-cache-cleanup-policy.md
reports/: weekly-context-2026-05-30.md
scripts/: aggregate_model_scores.py  local_model_backends.py  refresh_hf_mlx_candidates.py  run_coding_generation_suite.py  run_mlx_candidate_sweep.py  run_multilingual_prompt_suite.py  run_openclaw_native_tool_execution_suite.py  run_openclaw_tool_adapter_suite.py  run_small_model_core_suite.py  run_tool_calling_suite.py  score_alias_normalized_multilingual_suite.py
tests/: test_aggregate_model_scores.py  test_alias_normalized_multilingual_scorer.py  test_mlx_sweep_output_cleanup.py  test_openclaw_tool_adapter_suite.py  test_small_model_core_pack.py  test_small_model_core_runner.py
(+133 files in other folders)
